--- a/proun-ios-exercise-swiftui/Info.plist
+++ b/proun-ios-exercise-swiftui/Info.plist
@@ -14,6 +14,7 @@
 		<string>Roboto-Regular.ttf</string>
 		<string>TradeGothicLTStd-BdCn20.otf</string>
 		<string>Roboto-Medium.ttf</string>
+		<string>Roboto-Light.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
